Co-authored-by: rakindumarambe17@gmail.com <rakindumarambe17@gmail.com>

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.link-carrier{
+    .link-carrier{
     font-weight: 700; 
     font-family: Arial, sans-serif; 
     color: #5c5c5c; 
@@ -7,9 +7,18 @@
 .link-carrier:hover{
     color: #464646;
 }
+.html-section{
+    background-color: aliceblue;
+}
 
-
-
+footer{
+    padding: 10px;
+    margin-top: 20px;
+}
+footer p{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700;
+}
 
 
 
