--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-    body{
-        scroll-behavior: smooth;
-    }
+  html {
+    scroll-behavior: smooth;
+  }
+
     .link-carrier {
         font-weight: 700;
         font-family: Arial, sans-serif;
@@ -18,27 +19,90 @@
         color: white;
     }
 
-    .html-section h5 , h3{
+    .html-section h5,
+    h3 {
         color: black;
     }
 
     footer {
-        padding: 3px;
+        padding: 2px;
+        padding-top: 20px;
     }
 
     footer p {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-weight: 700;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 300;
     }
-    
-    .space-carrier{
+
+    .space-carrier {
         margin: 20px;
         border-radius: 10px;
         padding: 10px;
     }
-    .start{
+
+    .start {
         width: 65%;
     }
+
+
+    .bg-contact-form{
+        border-radius: 15px;
+        height: 400px;
+        background-color: rgba(255, 255, 255, 0.507);
+        padding-left: 40px;
+       padding-right: 40px;
+
+        
+    }
+    .devlopers-card {
+        background-color: rgba(255, 255, 255, 0);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin: 40px;
+        margin-left: 50px;
+        margin-right: 50px;
+        padding: 20px;
+        width: 200px;
+
+    }
+
+
+    .start-btn {
+        text-align: left;
+        float: left;
+    }
+
+    .contact {
+        background-image: url("images/blob-scene-haikei.png");
+        background-size: 100% 100%;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        color: rgb(0, 0, 0);
+
+    }
+
+    .about-page {
+        background-image: url("images/blurry-gradient-haikei.png");
+        background-size: 100% 100%;
+        background-attachment: scroll;
+        background-repeat: no-repeat;
+        color: rgb(0, 0, 0);
+        padding: 40px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -52,7 +116,15 @@
             width: 100%;
         }
 
-        .start{
+        .start {
             width: 100%;
+        }
+
+        .forms {
+            margin-bottom: -1px;
+        }
+
+        .img-tag {
+            margin-bottom: 100px;
         }
     }
