--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
         
     }
     .devlopers-card {
-        background-color: rgba(255, 255, 255, 0);
+        background-color: rgba(0, 0, 0, 0);
         border-radius: 10px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         margin: 40px;
@@ -88,6 +88,7 @@
         background-repeat: no-repeat;
         color: rgb(0, 0, 0);
         padding: 40px;
+        margin-bottom: -10px;
     }
 
 
@@ -126,5 +127,15 @@
 
         .img-tag {
             margin-bottom: 100px;
+        }
+        .bg-contact-form{
+            margin-left: 10px;
+            margin-right: 10px;
+            margin-top: -80px;
+            margin-bottom: 20px;
+        }
+        .devlopers-card{
+            margin: 10px;
+            color: white;
         }
     }
