--- a/style.css
+++ b/style.css
@@ -115,12 +115,10 @@
         padding: 40px;
         margin-bottom: -10px;
     }
- 
-
-
-
-
-
+.bg-about{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 
 
