--- a/style.css
+++ b/style.css
@@ -160,7 +160,11 @@
         }
 
         .img-tag {
-            margin-bottom: 100px;
+            margin: 10px;
+            margin-bottom: 150px;
+        }
+        .bg-text{
+            margin-top: 50px;
         }
         .bg-contact-form{
             margin-left: 10px;
@@ -183,11 +187,8 @@
         .smlar{
             font-size: 18px;
         }
-        .img-tag{
-            width: 100%;
-        }
         .coding-img{
-            margin-top: -150px;
+            margin-top: -50px;
         }
         .hide{
             display: none;
@@ -199,53 +200,6 @@
 
 
 
-
-
-
-        /* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
 
 
 
